Second commit, change of images

--- a/section.html
+++ b/section.html
@@ -22,14 +22,14 @@
             <div class="wine-div">
                 <h2>White wine</h2>
                 <figure>
-                    <img src="https://manila-wine.com/media/catalog/product/cache/1/image/700x700/9df78eab33525d08d6e5fb8d27136e95/s/a/santa-alvara--sauvignon-blanc.jpg" class="figuras" alt="white wine figure">
+                    <img src="https://www.checkers.co.za/medias/10126093EA-checkers515Wx515H?context=bWFzdGVyfGltYWdlc3w4NjQwN3xpbWFnZS9wbmd8aW1hZ2VzL2g0MC9oNjkvODg3NjY2MjMyNTI3OC5wbmd8MWI4NDcwZWIzZTk0NzgwNTIyOTg4NWI5OWE2MzIxZWFlYmVmOTM4MmIxZjNhNzFiMTkwZDE3MjQxNWMyYjllYg" class="figuras" alt="white wine figure">
                 </figure>
                 <button class="buttons">Buy now</button>
             </div>
             <div class="wine-div">
                 <h2>Red wine</h2>
                 <figure>
-                    <img src="https://cdn.shopify.com/s/files/1/1809/5483/products/DRR_Glass_1024x1024@2x.jpg?v=1488520636" class="figuras" alt="red wine figure">
+                    <img src="https://menageatroiswines.com/sites/default/files/MAT_Redblend_new.png" class="figuras" alt="red wine figure">
                 </figure>
                 <button class="buttons">Buy now</button>
             </div>
